# Bandit-Simulation

./: .gitignore  Bandit_test.py  PostDiffSimulation.py  README.md  bandit_algorithm.py  bandit_check_result.py  bandit_test.py  bayes_model.py  bayes_vector_ops.py  exp.py  main.py  main_app.py  main_simple.py  main_simple_optimization.py  main_sngle_setting.py  meta_algorithm.py  optimization_simulation.py  plot_main_1.py  plots.py  policy.py  pyproject.toml  recommendation.py  requirements.txt  requirements_gui.txt  sim_wrapper.py  simple_debug.py  simulation_configurator.py  table_main.py  terminal note.txt  test_procedure_configurator.py
bandit_simulation/: __init__.py  analysis.py  bandit_algorithm.py  bayes_vector_ops.py  plotting.py  sim_wrapper.py  simulation_configurator.py
plots/: bernoulli_misspec_plot.py  postdiff_sample_illustration_plot.py  wald_crit_plot.py  wald_test_distribution_plot.py
scripts/: ait_art_comparison.py  emprical_sim_post.py  emprical_sim_prior.py  mis_specification.py  simulation_template.py  sweep_across_tests.py  test_factorial_metrics_plot.py  wald_fpr_analysis.py
src/: bandit_algorithm.py  bayes_vector_ops.py  meta_algorithm.py  sim_wrapper.py  simulation_configurator.py  test_procedure_configurator.py
static/styles/: style.css  style2.css
templates/: index.html  index2.html  recommend.html
webapp/: app.py  recommendation.py
webapp/static/styles/: style.css  style2.css
webapp/templates/: index.html  recommend.html
