[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandit-simulation"
version = "0.1.0"
description = "Bandit simulation framework for algorithm-induced testing"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "joblib",
]

[project.optional-dependencies]
webapp = [
    "flask",
    "waitress",
]
dev = [
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["bandit_simulation*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
